--- a/Alee_BulkyWeb/appsettings.json
+++ b/Alee_BulkyWeb/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:ALEEVAN\\SQLEXPRESS;Database=AleeDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
