--- a/Alee_BulkyWeb/appsettings.json
+++ b/Alee_BulkyWeb/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server:ALEEVAN\\SQLEXPRESS;Database=AleeDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
