--- a/Alee_BulkyWeb/appsettings.json
+++ b/Alee_BulkyWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:ALEEVAN\\SQLEXPRESS;Database=AleeDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=ALEEVAN\\SQLEXPRESS;Database=AleeDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
