--- a/AleeVan.DataAccess/AleeVan.DataAccess.csproj
+++ b/AleeVan.DataAccess/AleeVan.DataAccess.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AleeVan.Models\AleeVan.Models.csproj" />
+    <ProjectReference Include="..\AleeVan.Utility\AleeVan.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
