--- a/Alee_BulkyWeb/AleeBookWeb.csproj
+++ b/Alee_BulkyWeb/AleeBookWeb.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Identity\Data\" />
     <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
