--- a/Alee_BulkyWeb/appsettings.json
+++ b/Alee_BulkyWeb/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=AleeVan\\SQLEXPRESS;Database=AleeDB;Trusted_Connection=True;TrustServerCertificate=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AleeBookWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=AleeVan\\SQLEXPRESS;Database=AleeDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
