--- a/Alee_BulkyWeb/Properties/launchSettings.json
+++ b/Alee_BulkyWeb/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7002;http://localhost:5216",
+      "applicationUrl": "https://localhost:7002;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
